fix grid width logic. test editor z-index

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -619,6 +619,7 @@ button.run-tests {
   right: 0px;
   background-color: rgba(255, 255, 255, 0.95);
   padding-top: 24px;
+  z-index: 999;
 }
 .test-editor h3 {
   margin: 8px;
